--- a/dinamo.html
+++ b/dinamo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-	    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+	    <meta http-equiv="content-type" content="text/html;charset=utf-8">
 		<title> Footbal Fans Zone </title>
 		<link rel="stylesheet" type="text/css" href="style/style.css"/>
 		
