--- a/ultras.html
+++ b/ultras.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-		<title> Footbal Fans Zone </title>
+		<meta http-equiv="content-type" content="text/html;charset=utf-8">
+		<title> Football Fans Zone </title>
 		<link rel="stylesheet" type="text/css" href="style/style.css"/>
 	</head>
 	
