--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8">
-		<title> Footbal Fans Zone </title>
+		<title> Football Fans Zone </title>
 		<link rel="stylesheet" type="text/css" href="style/style.css"/>
 		<script type="text/javascript" src="html5gallery/jquery.js"></script>
 		<script type="text/javascript">
